end 4.1 oject methods. this

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     
-    <script src="4.Object/main.js"></script>
+    <script src="4.Methods_Object.This/main.js"></script>
 </body>
 </html>
