train Map & Set

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: #A9A9A9;">
     
-    <script src="4.Methods_Object.This/main.js"></script>
+    <script src="5.DataTypes/5.7.MapAndSet/app.js"></script>
 </body>
 </html>
